tests/integration/fixtures/laugh/error/생성자에서_반환_사용.laugh
클래스 Robot {
    init() { 반환 5; }
}

변수 r = Robot();
